--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
